fixed button not showing

--- a/front-end/src/css/style_login.css
+++ b/front-end/src/css/style_login.css
@@ -201,7 +201,7 @@ a:hover{
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #333333, #333333, #e60000);
+	background-image: linear-gradient(to right, #333333, #333333, #e60000) !important;
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
